<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_clothes">

    <fragment
        android:id="@+id/navigation_clothes"
        android:name="hu.attilavegh.dressit.ui.fragments.cloth.ClothesFragment"
        android:label="@string/title_clothes"
        tools:layout="@layout/fragment_shape" />

    <fragment
        android:id="@+id/navigation_shape"
        android:name="hu.attilavegh.dressit.ui.fragments.shape.ShapeFragment"
        android:label="@string/title_shape"
        tools:layout="@layout/fragment_clothes" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="hu.attilavegh.dressit.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>