<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/measurement_icon_image_desc"
                app:srcCompat="@drawable/measurements_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/size_label"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/size"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/size_spinner"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0"
                        android:entries="@array/size_array"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gender_label"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/gender_spinner"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:entries="@array/gender_array" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/height_label"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/height"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/heightData"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:hint="@string/height_text_field"
                        android:inputType="textShortMessage|number|text"
                        android:text="@string/_0"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/weight_label"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/weight"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/weightData"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:hint="@string/weight_text_field"
                        android:inputType="number|textPersonName"
                        android:text="@string/_0"
                        tools:targetApi="o" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/chest"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/chestData"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/chest_text_field"
                        android:inputType="number|textPersonName"
                        android:text="@string/_0"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/waist"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/waistData"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/waist_text_field"
                        android:inputType="number|textPersonName"
                        android:text="@string/_0"
                        tools:targetApi="o" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/hips"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/hipsData"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hips_data_field"
                        android:inputType="number"
                        android:text="@string/_0"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/sleeves"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/sleevesData"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hips_data_field"
                        android:inputType="number"
                        android:text="@string/_0"
                        tools:targetApi="o" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/saveInitialDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:padding="16dp"
                    android:text="@string/save_details" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>