<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".InitialDataEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/measurement_icon_image_desc"
            app:srcCompat="@drawable/measurements_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/size_label"
                    android:layout_width="85dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/size"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/size_spinner"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0"
                    android:entries="@array/size_array"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gender_label"
                    android:layout_width="85dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:entries="@array/gender_array" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/height_label"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/height"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:hint="@string/height_text_field"
                    android:inputType="textPersonName"
                    android:text="@string/_0"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/weight_label"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/weight"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:hint="@string/weight_text_field"
                    android:inputType="textPersonName"
                    android:text="@string/_0"
                    tools:targetApi="o" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/chest"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/chest_text_field"
                    android:inputType="textPersonName"
                    android:text="@string/_0"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/waist"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/waist_text_field"
                    android:inputType="textPersonName"
                    android:text="@string/_0"
                    tools:targetApi="o" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Save details" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>